fix: correct diff text color in dark mode (#113)
Makes red/green show up in the diff size on dark mode

Closes #110

--- a/apps/webapp/src/components/PullTable.module.scss
+++ b/apps/webapp/src/components/PullTable.module.scss
@@ -67,11 +67,11 @@
 }
 
 .additions {
-    color: $green4;
+    color: $green4 !important;
 }
 
 .deletions {
-    color: $red4;
+    color: $red4 !important;
 }
 
 .empty {
